[project]
name = "autoresearch-intel"
version = "0.1.0"
description = "Autonomous pretraining research swarm (Intel XPU / AMD ROCm / NVIDIA CUDA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    # Optional: Intel Extension for PyTorch (for Intel Arc/Data Center GPUs)
    "intel-extension-for-pytorch>=2.6.0; platform_system=='Linux'",
    # Optional: Flash Attention for AMD
    "flash-attn-rocm>=0.2.0; platform_system=='Linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux' and extra == 'rocm'" },
    { index = "pytorch-cpu", marker = "extra == 'cpu'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
rocm = []  # Uses ROCm PyTorch
intel = ["intel-extension-for-pytorch>=2.6.0"]
cuda = []  # Standard PyTorch with CUDA
